# Titan

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh
client/: Cargo.toml
client/src/: lib.rs
client/src/http/: client_async_impl.rs  client_sync_impl.rs  client_trait.rs
client/src/tcp/: tcp_client.rs  tcp_client_blocking.rs
indexer/: Cargo.toml  build.rs
indexer/src/: main.rs  options.rs
indexer/src/alkanes/: indexer.rs  mod.rs  store.rs
indexer/src/api/: alkanes.rs  alkanes.rs.backup  alkanes.rs.broken  api.rs  mod.rs  query.rs
indexer/src/bitcoin_rpc/: adapter.rs  result.rs
indexer/src/db/: entry.rs  mod.rs  rocks.rs  util.rs
indexer/src/index/: chain.rs  index.rs  reorg.rs  settings.rs  store.rs
indexer/src/index/inscription/: envelope.rs  inscription_parser.rs
indexer/src/index/updater/: bitcoin_node_adapter.rs  downcast.rs  events.rs  index_updater.rs  mod.rs  runtime_adapter.rs  storage_adapter.rs  store_lock.rs  transaction_update.rs
indexer/src/index/updater/cache/: bg_writer.rs  block_cache.rs  mempool_cache.rs
indexer/src/index/updater/fetcher/: mempool_fetcher.rs
indexer/src/index/updater/rollback/: rollback.rs  rollback_cache.rs
indexer/src/index/updater/transaction/: store.rs  transaction_parser.rs  transaction_updater.rs
indexer/src/models/: batch_delete.rs  batch_rollback.rs  batch_update.rs  block.rs  mod.rs  rune.rs  transaction_state_change.rs
indexer/src/server/: error.rs  mod.rs  server.rs  server.rs.backup
indexer/src/subscription/: dispatcher.rs  spawn.rs  tcp_subscription.rs
indexer/src/subscription/webhook/: manager.rs  process.rs  store.rs
indexer/src/util/: memory.rs  mod.rs
indexer/tests/: tcp_e2e.rs
oracle/: Cargo.toml
oracle/src/: main.rs  mempool.rs
oracle/src/mempool_smart_contract/: mod.rs  state.rs  transaction.rs  types.rs  updater.rs  utils.rs
ts-sdk/: README.md  package-lock.json  package.json
ts-sdk/src/: tcp-client.ts  types.ts
types/: Cargo.toml
types-api/: Cargo.toml  README.md
types-api/src/: address.rs  lib.rs  query.rs  rune.rs  subscription.rs
types-core/: Cargo.toml  README.md
types-core/src/: block.rs  event.rs  height.rs  inscription_id.rs  lib.rs  mempool_entry.rs  outpoint.rs  rune.rs  rune_amount.rs  rune_id.rs  serde_str.rs  spaced_rune.rs  transaction.rs  tx_in.rs  tx_out.rs  txid.rs
types/src/: address.rs  block.rs  event.rs  lib.rs  query.rs  rune.rs  rune_id.rs  rune_type.rs  serde_str.rs  spaced_rune.rs  tx_out.rs  txid.rs
