[package]
name = "titan-client"
version.workspace = true
edition = "2021"

authors = ["Marcos <mcolladomcm@email.com>"]
license = "MIT OR Apache-2.0"
description = "HTTP and TCP client for Titan bitcoin and runes indexer"
repository = "https://github.com/SaturnBTC/titan"
readme = "README.md"
categories = []
keywords = ["bitcoin", "indexer", "runes", "rust"]

[dependencies]
titan-types-core = { workspace = true, features = ["serde"] }
titan-types-api = { workspace = true }

bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["tcp_client", "tcp_client_blocking"] 
tcp_client = []
tcp_client_blocking = []
