[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
titan-client = { workspace = true, features = ["tcp_client"] }
titan-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bitcoin = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
arch_sdk = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
base64 = "0.13.0"
rand = "0.8.5"
anyhow = "1.0.75"
